[BugFix] Dedup ADMIN EXECUTE target ids and defensively copy AST list
- resolveTargetNodes now deduplicates via TreeSet so a repeated id like
  "ADMIN EXECUTE ON 10001,10001 ..." does not apply a side-effectful
  script twice on the same BE/CN.
- The multi-target ExecuteScriptStmt constructor now uses List.copyOf
  on the incoming ids list, so post-construction mutation of the caller's
  list cannot change parsed execution targets and AST immutability is
  preserved.